--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,4 +143,8 @@ jobs:
     
         - name: Deploy new container
           run: |
-            aws ecs update-service --cluster jwt-pizza-service --service jwt-pizza-service --force-new-deployment
+            aws ecs update-service \
+              --cluster jwt-pizza-service \
+              --service jwt-pizza-service \
+              --force-new-deployment
+
