--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,38 +59,43 @@ jobs:
               source: 'jwt-pizza-service',
               url: '${{ secrets.METRICS_URL }}',
               apiKey: '${{ secrets.METRICS_API_KEY }}',
-            },            
+            },  
+            logging:    {
+              source: 'jwt-pizza-service',
+              userId: ${{ secrets.LOGGING_USER_ID }},
+              url: '${{ secrets.LOGGING_URL }}',
+              apiKey: '${{ secrets.LOGGING_API_KEY }}',
+            },
           };" > src/config.js
-
-      - name: Tests
-        run: npm test
-
-      - name: set version
-        id: set_version
-        run: |
-          version=$(date +'%Y%m%d.%H%M%S')
-          echo "version=$version" >> "$GITHUB_OUTPUT"
-          printf '{"version": "%s" }' "$version" > src/version.json
-
-      - name: Update coverage
-        run: |
-          coverage=$(jq '.total.lines.pct' coverage/coverage-summary.json)
-          color=$(echo "$coverage < 80" | bc | awk '{if ($1) print "red"; else print "green"}')
-          curl -s -X POST "https://pizza-factory.cs329.click/api/badge/${{ secrets.NET_ID }}/jwtpizzaservicecoverage?label=Coverage&value=$coverage%25&color=$color" -H "authorization: bearer ${{ secrets.FACTORY_API_KEY }}"
-      - name: Create dist
-        run: |
-          mkdir dist
-          cp Dockerfile dist
-          cp -r src/* dist
-          cp *.json dist
-          sed -i "s/root/${{ secrets.DB_USERNAME }}/g" dist/config.js
-          sed -i "s/tempdbpassword/${{ secrets.DB_PASSWORD }}/g" dist/config.js
-          sed -i "s/127.0.0.1/${{ secrets.DB_HOSTNAME }}/g" dist/config.js
-      - name: Update distribution artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: package
-          path: dist/
+            - name: Tests
+              run: npm test
+      
+            - name: set version
+              id: set_version
+              run: |
+                version=$(date +'%Y%m%d.%H%M%S')
+                echo "version=$version" >> "$GITHUB_OUTPUT"
+                printf '{"version": "%s" }' "$version" > src/version.json
+      
+            - name: Update coverage
+              run: |
+                coverage=$(jq '.total.lines.pct' coverage/coverage-summary.json)
+                color=$(echo "$coverage < 80" | bc | awk '{if ($1) print "red"; else print "green"}')
+                curl -s -X POST "https://pizza-factory.cs329.click/api/badge/${{ secrets.NET_ID }}/jwtpizzaservicecoverage?label=Coverage&value=$coverage%25&color=$color" -H "authorization: bearer ${{ secrets.FACTORY_API_KEY }}"
+            - name: Create dist
+              run: |
+                mkdir dist
+                cp Dockerfile dist
+                cp -r src/* dist
+                cp *.json dist
+                sed -i "s/root/${{ secrets.DB_USERNAME }}/g" dist/config.js
+                sed -i "s/tempdbpassword/${{ secrets.DB_PASSWORD }}/g" dist/config.js
+                sed -i "s/127.0.0.1/${{ secrets.DB_HOSTNAME }}/g" dist/config.js
+            - name: Update distribution artifact
+              uses: actions/upload-artifact@v4
+              with:
+                name: package
+                path: dist/
   deploy:
       runs-on: ubuntu-latest
       permissions:
