--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,3 +152,10 @@ jobs:
               --cluster jwt-pizza-service \
               --service jwt-pizza-service \
               --force-new-deployment
+        - name: Annotate deployment in Grafana
+          run: |
+            curl -s -X POST https://cooperallenjohn.grafana.net/api/annotations \
+              -H "Authorization: Bearer ${{ secrets.GRAFANA_ACCESS_TOKEN }}" \
+              -H "Content-Type: application/json" \
+              -d '{"dashboardUID":"jwt-pizza-six", "panelId":3, "tags":["backend","production"], "text":"Version '"$version"' deployed" }'
+        
